--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@
 notify_key = SCT287992T9QHqMza9OWmMnDO38LNEvG26
 #currency_url = https://www.boc.cn/sourcedata/exchange.html
 interval_seconds = 5
-CURRENCY = 美元
+CURRENCY = 英镑
 THRESHOLD = 0.5
 EXCEL_FILE = 汇率记录.xlsx
-SHEET_NAME = 美元汇率
+SHEET_NAME = 英镑汇率
